--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
 }
 
 .header a.active {
-  background-color: dodgerblue;
+  background-color: turquoise;
   color: white;
 }
 
@@ -51,4 +51,24 @@ body {
   .header-right {
     float: none;
   }
+}
+
+img{
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right:auto;
+}
+
+h1{
+  text-align: center;
+}
+
+a.button{
+  padding: 20px 10px;
+  border-radius: 3px;
+  color: white;
+  background-color: turquoise;
+  text-decoration: none;
+
 }
