--- a/main.css
+++ b/main.css
@@ -95,6 +95,34 @@ a.button{
 }
 
 
+.container{
+  max-width:1200px;
+  width:100%;
+  position:relative;
+  margin:0 auto;
+  }
+
+.mySwiper{
+    max-width: 1100px;
+    height: 60vh;
+    display: flex;
+    align-items: center;
+    }
+  
+.card{
+      text-align: center;
+      background-color: #ffffff;
+      padding:20px 30px;
+      border-radius: 10px;
+    box-shadow:rgb(149 157 165 / 20%) 0px 8px 24px;
+      }
+    
+.card img{
+        width: 130px;
+        border-radius: 50%;
+      margin-top:-70px;
+        }
+          
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
   width: 100%; /* Full width */
